--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,19 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:focusable="true"
-    android:screenReaderFocusable="true"
-    tools:context=".MainActivity">
 
+    tools:context=".MainActivity">
+    <!--    android:focusable="true"
+     android:screenReaderFocusable="true"
+    -->
     <TextView
         android:id="@+id/textview_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
+        android:accessibilityHeading="true"
         android:background="@android:color/holo_blue_dark"
         android:nextFocusForward="@id/textview_2"
         android:text="Hello World!"
-        android:accessibilityHeading="true"
         android:textColor="@android:color/holo_red_dark"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -39,14 +40,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="64dp"
+        android:accessibilityHeading="true"
+        android:accessibilityLiveRegion="polite"
+        android:nextFocusLeft="@id/greeting"
+        android:nextFocusRight="@id/textview_2"
+        android:nextFocusUp="@id/textview_2"
+        android:nextFocusDown="@id/textview_2"
         android:nextFocusForward="@id/imageview_logo_holder"
         android:text="TextView_2"
-        android:accessibilityLiveRegion="polite"
-        android:accessibilityHeading="true"
-        android:nextFocusDown="@id/textview_2"
-        android:nextFocusLeft="@id/greeting"
-        android:nextFocusUp="@id/textview_2"
-        android:nextFocusRight="@id/textview_2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageview_logo_holder" />
@@ -54,9 +55,11 @@
     <androidx.compose.ui.platform.ComposeView
         android:id="@+id/greeting"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         app:layout_constraintTop_toBottomOf="@id/textview_2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
