Intent filter Android 13

--- a/app/src/main/res/layout/activity_intent_filter.xml
+++ b/app/src/main/res/layout/activity_intent_filter.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         android:textSize="32sp"
+        android:text="Hello World"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
