--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="margin_small">8dp</dimen>
+    <dimen name="padding_medium">16dp</dimen>
+    <dimen name="pading_large">32dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
